@startuml
package User {
    class Utilisateur {
        email : string
        password : string / hash
        nom : string
        prenom : string
        date_naissance : date
        date_creation : date
        sexe : SEXE
        type_utilisateur : TYPE_UTILISATEUR
        statut : STATUT_UTILISATEUR
    }
    
    abstract class Administrateur {}
    abstract class Candidat {}
    abstract class Recruteur {}
}

package Company {
    class Organisation {
        siren : string
        nom : string
        siege_social : string
        type : TYPE_ORGANISATION
    }
    
    class Formulaire {
        date_creation : date
        etat : ETAT
        type : TYPE_FORMULAIRE
    }
}

package Job {
    class Offre_d_emploi {
        date_validite : date
        indication : string
        nombre_de_piece : unsigned int
        modif_date_validite() : date
        etat : ETAT_OFFRE
    }
    
    class Fiche_poste {
        intitule : string
        statut_poste : string
        responsable_hierarchique : string
        type_metier : string
        lieu_mission : string
        rythme : string
        fourchette_salaire : double[2]
    }
    
    class Candidature {
        date_candidature : date
        pieces_jointes : string
        modif_dossier() : void
        etat : ETAT
        compléter_candidature() : void
        statut : STATUT_CANDIDATURE
    }
    
    class Description {
        missions : string
        activités : string
        compétences_attendu : string
    }
}


package Enum {
    enum ETAT {
        ACCEPTEE
        REFUSEE
        EN_ATTENTE
        EN_COURS
    }

    enum ETAT_OFFRE {
        non_publiee
        publiee
        expiree
    }

    enum STATUT_UTILISATEUR {
        ACTIF
        INACTIF
    }

    enum SEXE {
        HOMME
        FEMME
        AUTRE
    }

    enum TYPE_FORMULAIRE {
        AJOUT_ORGANISATION
        REJOINDRE_ORGANISATION
    }

    enum TYPE_UTILISATEUR {
        Administrateur
        Candidat
        Recruteur
    }

    enum TYPE_ORGANISATION {
        Association
        EURL
        SARL
        SASU
        Autre
    }
}

Utilisateur <|-- Administrateur
Utilisateur <|-- Candidat
Utilisateur <|-- Recruteur

Recruteur "0..1" -- "*" Recruteur : valider demande de recruteur >
Administrateur "*"-- "*" Utilisateur : peut_donner_acces_admin >

Offre_d_emploi "1..*" -- "1" Organisation : appartient à >
Offre_d_emploi "1..*" -- "1" Fiche_poste : contient >
Offre_d_emploi "1..*" -- "1" Recruteur : est éditeur de <

Fiche_poste "1" -- "1" Description : contient >

Candidature "1..*" -- "1" Offre_d_emploi : concerne >
Candidature "1..*" -- "1" Candidat : est de >

Recruteur "1" -- "1" Formulaire : doit remplir >
Formulaire "1" - "1" Organisation : concerne >

note top of Utilisateur
    password doit respecter les recomandations de sécurité de la CNIL
    - 12 caractères minimum
    - 1+ majuscule
    - 1+ minuscule
    - 1+ chiffre
    - 1+ caractère spécial parmi une liste d'autorisés
end note

@enduml